# lua-native

./: .gitignore  .npmignore  ASYNC.md  CLAUDE.md  CMakeLists.txt  CODE-ANALYSIS.md  FEATURES.md  FUTURE-FEATURES.md  FUTURE.md  LIBRARY-OPT-IN-PLAN.md  LICENSE.txt  README.md  binding.gyp  cmake-build.js  get_vcpkg_path.js  index.d.ts  index.js  package-lock.json  package.json  run-sanitized-ts.js  run-tests.js  tsconfig.json  types.d.ts  vitest.config.ts
.claude/: settings.local.json
docs/: ASYNC.md  BRIDGE-GAP-ANALYSIS.md  BYTECODE.md  CODE-REVIEW-1.md  CODE-REVIEW-2.md  CODE-REVIEW-3.md  CODE-REVIEW-4.md  CODE-REVIEW-5.md  CODE-REVIEW-6.md  CODE-REVIEW-7.md  CODE-REVIEW-8.md  CODE-REVIEW-DEFERRED.md  CODE-REVIEW-THOUGHTS.md  DEVCONTAINER.md  ELECTRON.md  FEATURES.md  FUTURE.md  RELEASING.md  REQUIRE.md  SANITIZERS-THOUGHTS.md  SANITIZERS.md  TABLE-REFERENCE.md  USERDATA-METHOD-BINDING.md  USERDATA.md
src/: lua-async-worker.h  lua-native.cpp  lua-native.h
src/core/: lua-runtime.cpp  lua-runtime.h
tests/cpp/: lua-native-test.cpp
tests/fixtures/: no-return.lua  return-table.lua  return-values.lua  set-global.lua  syntax-error.lua  use-callback.lua
tests/fixtures/modules/: testmod.lua
tests/ts/: lua-native.spec.ts
